apps/cluster-gateway/ingress-gateway/50-service/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: cluster-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "1"    
spec:
  gatewayClassName: cilium
  listeners:
  ###
  # ACTUAL BUDGET
  ###
  - name: actual-budget-https
    hostname: "actual-budget.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: actual-budget-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: actual-budget  
  ###
  # SPARKY FITNESS
  ###
  - name: sparky-https
    hostname: "sparky-fitness.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: sparky-fitness-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: sparky-fitness
  ###
  # QBITTORRENT
  ###
  - name: qbittorrent-https
    hostname: "qbittorrent.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: qbittorrent-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: qbittorrent
  ###
  # PROWLARR
  ###
  - name: prowlarr-https
    hostname: "prowlarr.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: prowlarr-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: prowlarr
  ###
  # SONARR
  ###
  - name: sonarr-https
    hostname: "sonarr.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: sonarr-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: sonarr
  ###
  # RADARR
  ###
  - name: radarr-https
    hostname: "radarr.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: radarr-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: radarr
  ###
  # JELLYFIN
  ###
  - name: jellyfin-https
    hostname: "jellyfin.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: jellyfin-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: jellyfin
  ###
  # CODE SERVER
  ###
  - name: code-server-https
    hostname: "code-server.hoareau-marion.eu"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: code-server-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: code-server
  ###
  # UPTIME KUMA
  ###
  - name: uptime-kuma-https
    hostname: "uptime-kuma.hoareau-marion.eu"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: uptime-kuma-hoareau-marion-eu-tls   # Secret must exist in gateway’s namespace
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: uptime-kuma
  ###
  # PAPERLESS NGX
  ###
  - name: paperless-ngx-https
    hostname: "paperless-ngx.hoareau-marion.eu"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: paperless-ngx-hoareau-marion-eu-tls   # Secret must exist in gateway’s namespace
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: paperless-ngx  
  ###
  # SFTPGO
  ###
  - name: sftpgo-https
    hostname: "sftpgo.hoareau-marion.eu"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: sftpgo-hoareau-marion-eu-tls  # Create this TLS secret
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: sftpgo  
  ###
  # BROTHER SCANNER
  ###
  - name: sroom-prt01-scanner-https
    hostname: "sroom-prt01-scanner.hoareau-marion.eu"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: sroom-prt01-scanner-hoareau-marion-eu-tls  # Create this TLS secret
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: sroom-prt01-scanner
  ###
  # SYNAPSE
  ###
  - name: synapse-https
    hostname: "synapse.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: synapse-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: synapse  
  ###
  # MATRIX AUTH SERVICE
  ###
  - name: mas-synapse-https
    hostname: "mas.synapse.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: mas-synapse-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: synapse  
  ###
  # KEYCLOAK
  ###
  - name: auth-https
    hostname: "auth.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: auth-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: auth  
  ###
  # KEYCLOAK ADMIN
  ###
  - name: auth-private-https
    hostname: "auth.private.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: auth-private-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: auth
  ###
  # TREK
  ###
  - name: trek-https
    hostname: "trek.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: trek-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: trek  
  ###
  # IMMICH
  ###
  - name: immich-https
    hostname: "immich.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: immich-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: immich  
  ###
  # MOONLIGHT
  ###
  - name: moonlight-https
    hostname: "moonlight.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: moonlight-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: moonlight  
  ###
  # SUNSHINE
  ###
  - name: sunshine-https
    hostname: "sunshine.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: sunshine-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: sunshine  
  ###
  # HOME ASSISTANT
  ###
  - name: home-assistant-https
    hostname: "home-assistant.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: home-assistant-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: home-assistant  
  ###
  # PROMETHEUS
  ###
  - name: prometheus-https
    hostname: "prometheus.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: prometheus-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: prometheus
  ###
  # GRAFANA
  ###
  - name: grafana-https
    hostname: "grafana.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: grafana-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: grafana
  ###
  # PLANKA
  ###
  - name: planka-https
    hostname: "planka.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: planka-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gateway-access: planka
